--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@200;300;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../src/Reset.css"/>
   <title>Personal Portfolio</title>
 </head>
